--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = git://github.com/riscv/riscv-binutils-gdb.git
 [submodule "riscv-binutils-gdb"]
 	path = riscv-binutils-gdb
-	url = git@github.com:PolyArch/riscv-binutils-gdb.git
+	url = https://github.com/PolyArch/dsa-riscv-binutils-gdb
